--- a/src/app/configure/configure.component.css
+++ b/src/app/configure/configure.component.css
@@ -26,3 +26,12 @@ h1 {
   height: 100%;
   margin: 0 auto;
 }
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  padding: 20px;
+}
