--- a/src/app/configure/configure.component.html
+++ b/src/app/configure/configure.component.html
@@ -1,10 +1,25 @@
-
-<button id='syncButton' (click)="displayConfirmation()" [@simpleFadeAnimation]="'in'" class="btn btn-primary btn-xl btn-block">Sync</button>
-
   <div id="box" class="alert alert-success center-block" *ngIf="didStartSync" [@simpleFadeAnimation]="'in'">
   <h1>
       {{syncingMessage}}
     </h1>
 </div>
-<p [@simpleFadeAnimation]="'in'">There are {{syncingCount}} item(s) left to sync.</p>
-<p [@simpleFadeAnimation]="'in'">App version: {{version}}</p>
+
+<!-- Footer -->
+<footer class="footer font-small dark">
+
+  <div class="card">
+      <button id='syncButton' (click)="displayConfirmation()" [@simpleFadeAnimation]="'in'" class="btn btn-success btn-xl btn-block">End Shift</button>
+
+    <div class="card-header">
+      Information
+    </div>
+    
+    <div class="card-body">
+      <h5 class="card-title" [@simpleFadeAnimation]="'in'">There are {{syncingCount}} item(s) left to sync.</h5>
+      <p class = "card-text" [@simpleFadeAnimation]="'in'">App version: {{version}}</p>
+      <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
+    </div>
+  </div>
+
+</footer>
+<!-- Footer -->
