Add Bus ID dropdown

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,7 +20,7 @@
 
                             <!-- Boarded - Form-Group -->
                             <div class="form-group">
-                                <label class="col-form-label col-form-label-lg">Boarded</label>
+                                <label class="col-form-label col-form-label-lg">Boarded{{this.selectedBus}}</label>
                                 <div class="form-row">
                                     <div class="col-sm-5">
                                         <button type="button"
