--- a/src/app/configure/configure.component.html
+++ b/src/app/configure/configure.component.html
@@ -1,22 +1,35 @@
-  <div id="box" class="alert alert-success center-block" *ngIf="didStartSync" [@simpleFadeAnimation]="'in'">
+<div id="box" class="alert alert-success center-block" *ngIf="didStartSync" [@simpleFadeAnimation]="'in'">
   <h1>
-      {{syncingMessage}}
-    </h1>
+    {{syncingMessage}}
+  </h1>
+</div>
+
+<!-- Loop DropDown -->
+<div class="row">
+  <div class="col-md-12">
+    <div class="form-group">
+      <label class="col-form-label col-form-label-lg">Select a Bus Number</label>
+      <select [(ngModel)]="selectedBus" (ngModelChange)="this.dropdownsService.changeBus($event)" name="bus" class="form-control">
+        <option *ngFor="let bus of busDropdown" [ngValue]="bus">{{bus}}</option>
+      </select>
+    </div>
+  </div>
 </div>
 
 <!-- Footer -->
 <footer class="footer font-small dark">
 
   <div class="card">
-      <button id='syncButton' (click)="displayConfirmation()" [@simpleFadeAnimation]="'in'" class="btn btn-success btn-xl btn-block">End Shift</button>
+    <button id='syncButton' (click)="displayConfirmation()" [@simpleFadeAnimation]="'in'"
+      class="btn btn-success btn-xl btn-block">End Shift</button>
 
     <div class="card-header">
-      Information
+      Information {{this.selectedBus}}
     </div>
-    
+
     <div class="card-body">
       <h5 class="card-title" [@simpleFadeAnimation]="'in'">There are {{syncingCount}} item(s) left to sync.</h5>
-      <p class = "card-text" [@simpleFadeAnimation]="'in'">App version: {{version}}</p>
+      <p class="card-text" [@simpleFadeAnimation]="'in'">App version: {{version}}</p>
       <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
     </div>
   </div>
