--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -2,6 +2,8 @@
     padding: 10px 20px;
     font-size: 40px;
     border-radius: 10px;
+    background-color: #63b255;
+    color: white;
 }
 
 h2 {
@@ -11,3 +13,7 @@ h2 {
 label {
     font-size: 30px;
 }
+
+.largerSize {
+    font-size: 35px;
+  }
